crates/mun_compiler/src/snapshots/mun_compiler__diagnostics__tests__cyclic_type_alias_error.snap
---
source: crates/mun_compiler/src/diagnostics.rs
expression: "compilation_errors(\"\\n\\ntype Foo = Foo;\")"
---
error: cyclic type
 --> main.mun:3:12
  |
3 | type Foo = Foo;
  |            ^^^ cyclic type
  |
